package com.limmy.fragranceApp.Fragrance;


import org.springframework.data.jpa.repository.JpaRepository;

public interface FragranceRepository extends JpaRepository<Fragrance, Integer> {
}
