package com.limmy.fragranceApp.Fragrance.ScentInformation;

import org.springframework.data.jpa.repository.JpaRepository;

public interface ScentInformationRepository extends JpaRepository<ScentInformation, Integer> {
}
